--- a/.cproject
+++ b/.cproject
@@ -33,6 +33,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/CommonCPP/DateTime}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/CommonCPP}&quot;"/>
 								</option>
+								<option id="gnu.cpp.compiler.option.other.other.1994242657" superClass="gnu.cpp.compiler.option.other.other" value="-c -fmessage-length=0 -std=c++11" valueType="string"/>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.872252634" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.c.compiler.lib.debug.700667362" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.lib.debug">
